# seify-bladerf

./: .gitignore  .gitmodules  Cargo.toml  README.md  android.nix  bladerf.nix  correction_data.csv  flake.nix  fx3-sdk.nix  plot_corrections.py
.github/workflows/: CI.yml
examples/: arced_rx_file.rs  correction_test.rs  firmware_update.rs  info.rs  ook.rs  power_test.rs  power_test_parse.py  rx.rs  rx_file.rs  seify_rx.rs  siggen.rs  transceiver_gui.rs
examples/power_results/: 2JLJbXjByzmf3sXzdaZmf1R5huGGs9ag2Az6kwzvK8HZFCeH3BmcxrvrBTdMzVktHrY774TiB4Jyxdpwp68mcs85QbbtSi8VTX3Z7fjpGXk5xCqqgq4dWanVqMrYP6gEoowxG5LPTimjBWUFJRR7KMF72xmy6Xu86UL6dS.csv  2JLJbXjByzmf3sXzdaZmf1R5huGGs9ag2Az6kwzvK8HZFCeH3BmcxrvrBTdMzVkytmctVmK1YTt9rTkAFp7g699CxH4vpb1uKfdfDzBfaVBgnKbcycGt7NTwRa2ySRCiHFFVWpxzhgquNj9xR67PaCCBww8fNNbkxhbbN4.csv  2JLJbXjByzmf3sXzdaZmf1R5huGGs9ag2Az6kwzvK8HZFCeH3BmcxrvrBTdN4G2brtaXiQTRiKF3wZMa5cpN4h1UrpW2ExwFBGNtzPYg6RNAXDXR3zG8f8TyiAnRmxyWwjNULVTkQhPTu34N8dHGd16VhZBcZCoE8RrsWU.csv  2JLJbXjByzmf3sXzdaZmf1R5huGGs9ag2Az6kwzvK8HZFCeH3BmcxrvrBTdN4G2hTofK77Jj5ipDqPGnXLoGXy2cQVy4cqpf3Qy16hzXQNomMLHCLmUPFv9RJNxrqHVzRAg1bF6MefTe6Fk5FHyYsr3acXYJq3Vrzf8NF6.csv  2vggzCUcwZFjEqmzrDigER5VTQbthVVc3QY2JTN1NXqtD3TPhhkumRy1WCFusVzPDZi5da3DFg7rb15GagKAgZDhZzmy2bjSGQTqoiXd9fmY3HCYU3eMfi1YhnX88ZGB37CUS7mmC7mgAqhvrxtGCHXmiiGhTNEmv1Dd9KQ4Fn.csv  2vggzCUcwZFjEqmzrDigER5VTQbthVVc3QY2JTN1NXqtD3TPhhkumRy1WCFusVzPDa8ojs9ZTyiX53UwLBC6DrPHxhmGro5vq1PB9d4b35sBHzCGqrtFjG5zFQc58KJmgshjXoBiJhMDpL8vNx9jd5KXEmQPG7aXpxaLqsntNg.csv  2vggzCUcwZFjEqmzrDigER5VTQbthVVc3QY2JTN1NXqtD3TPhhkumRy1WCFusVzfpy5ZSajqFvsCYuiqpwVFDyyjZMfUmXqrRkpp4yuM2CbTR8SiB4Kd4JnCRcnAPh71y7ThPuzWgcG8pjSU9yUQxevqdnGjoEc7dhCFnRE9Wc.csv  2vggzCUcwZFjEqmzrDigER5VTQbthVVc3QY2JTN1NXqtD3TPhhkumRy1WCFusVzfpyWHYsrBUETs2x8WaSNAmH9Kx4enbjCLzMk9QtSJuch6fqSSYsZX7rrdyEs7PT9ccsxxVbQToBqgUDsTfxjtPSib9qQRbywsYeYyUycydW.csv  2vggzCUcwZFjEqmzrDim7p2N8oejirh5i46nhMi2JEiTNprSc4UmxC2nV3DWbjL7vJPchnFct9JpUUA3o8AkGpWUdJe3QNE3dk1r8pDHds9r4AMiRAwMNwSCW9aAobtqNVWSjsJtdFfocqfSgn4YmogPdu32HW5vveFkc9z1oA.csv  2vggzCUcwZFjEqmzrDim7p2N8oejirh5i46nhMi2JEiTNprSc4UmxC2nV3DWbjL7vJPchnFct9JpUUA3o8Anb56gLAMqnv2Xzrm3THmN9iGwm8u41wsfxpNvDd9Fm4tdEgtZFGFdvSW31b9FU5kPC1Lm3YKNchCQQ9jrm9sXAk.csv  2vggzCUcwZFjEqmzrDim7p2N8oejirh5i46nhMi2JEiTNprSc4UmxC2nV3DWbjL7xBXUVJGqBpJgF6d5naw4QarGrDak8Ug7XsRDzgsxaE4Gy7AkhgH94X2x5RQuk1Mn4vf5oq29fTjV6KyK3YMcBucUHixicoHkeyhod8kQEg.csv  2vggzCUcwZFjEqmzrDim7p2N8oejirh5i46nhMi2JEiTNprSc4UmxC2nV3DWbjL7xBXUVJGqBpJgF6d5naw6iqSUZ5JYX2UbtzARKAS365BNg5i6JTDTePyfntyzhUMZw83CKDxtxeZiV5T7pr3Sc7GqhNF4wzQE8VBun8ducG.csv  (+89 more)
libbladerf-sys/: Cargo.toml  build.rs  result
libbladerf-sys/src/: lib.rs
src/: bin.rs  bladerf.rs  bladerf1.rs  bladerf2.rs  error.rs  lib.rs  stream.rs  types.rs
src/seify/: device.rs  (+2 more)
sys/: build.rs
tests/: hardware_any.rs  hardware_xb200.rs
(+39 files in other folders)
