[package]
name = "bladerf"
repository = "https://github.com/ryankurte/rust-bladerf"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "WIP Rust wrapper for libbladerf"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
default = []
unimplemented = []

[workspace]
members = ["libbladerf-sys"]

[dependencies]
libc = "0.1.10"
num-complex = "0.4.6"
thiserror = "1.0.64"
bytemuck = "1.18.0"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
libbladerf-sys = { version = "0.1.0", path = "./libbladerf-sys" }

[dev-dependencies]
anyhow = "1.0.89"
parking_lot = "0.12.3"

