[package]
name = "bladerf"
repository = "https://github.com/ryankurte/rust-bladerf"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
description = "WIP Rust wrapper for libbladerf"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[features]
default = []
unimplemented = []

[workspace]
members = ["libbladerf-sys"]

[dependencies]
bytemuck = "1.18.0"
egui_plot = "0.29.0"
enum-map = "2.7.3"
libbladerf-sys = { version = "0.1.0", path = "./libbladerf-sys" }
log = "0.4.22"
num-complex = "0.4.6"
parking_lot = "0.12.3"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = "1.0.64"

[dev-dependencies]
anyhow = "1.0.89"
eframe = "0.29.1"
tempfile = "3.13.0"

