[package]
name = "bladerf"
repository = "https://github.com/MerchGuardian/seify-bladerf"
authors = [
    "Troy Neubauer <troy@foxhunter.ai>",
    "Ryan Kurte <ryankurte@gmail.com>",
]
description = "WIP Rust wrapper for libbladerf"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["libbladerf-sys"]

[dependencies]
bytemuck = "1.18.0"
enum-map = "2.7.3"
libbladerf-sys = { version = "0.1.0", path = "./libbladerf-sys" }
log = "0.4.22"
num-complex = "0.4.6"
num-traits = "0.2.19"
parking_lot = "0.12.3"
seify = { version = "0.16.0", default-features = false, optional = true }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = "1.0.64"

[dev-dependencies]
anyhow = "1"
clap = { version = "4.5.27", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.28"
once_cell = "1.20"
tempfile = "3.13"

[features]
seify = ["dep:seify"]
